<resources>
    <string name="app_name">NatureTwist</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nature">Nature"\s Twist is an exciting and thrilling story about Nature</string>
    <string name="title_activity_chapter1">1:THE CURIOUS GIRL</string>
    <string name="title1">Chapter1</string>
    <string name="content1">
     Vivian was feeling excited as she was coming back from school accompanied by two of her classmates discussing happily. What made her feel glad was that her mother was to return home. To add more to her excitement was the fact that the next day was her birthday and she had earlier concluded that her mother would not be around. Early in the morning when Vivian woke up, her father told her the good news that her mother would soon be back home. She had travelled for three days to see her parents. Mother arrived in the evening. Vivian, her elder brother and her father were extremely happy as they welcomed her. After Dinner, Vivian went to meet her parents to inform them on what she wished for her 13th birthday celebration.\n\n
“Daddy, I will be very happy to have the opportunity to visit the zoo to celebrate my birthday tomorrow.” Vivian told her father.\n\n
“Wow the zoo! Why the zoo my dear daughter?” her father asked.\n\n
 “You know the zoo consists of wild animals such as lions and tigers which are scary animals, it won’t be proper for your birthday celebration.” Her mother put in gently.\n\n
 “I want to go to the zoo Mum, in my last social studies class, the teacher taught us about wild life and this will be my best opportunity to learn about wild life.”\n\n
“If it is so, then, you will surely be granted the opportunity to visit the zoo.” Her father assured her.\n\n
“That will be very lovely,” Her mother said smiling.\n\n
She thanked her parents so much and went to bed feeling so happy. Early Saturday morning, Vivian was woken up by Noah (her brother) who was singing a happy birthday song, she felt very happy and she hugged him happily. She went to the sitting room to meet her birthday surprise, a medium sized cake beautifully adorned with small burning candles with her name boldly written round it. She was surprised beyond words, because she never expected a birthday cake. The cake was cut by her and the family had a lovely meal for breakfast. After the breakfast, Vivian asked, “Mum when did you bake the cake?”\n\n
“Ah! My dear darling daughter, on my way back, I bought some baking materials and I woke up very early to bake it.”\n\n
 “Wow! Thanks very much Mum.”\n\n
 Everyone got dressed immediately in preparation to visit the zoo. The zoo was located about two miles away from home, with a smooth and lovely ride in the family’s car they got to the zoo so soon. “Wild Life World” was a big and beautiful zoo where people trooped in daily to entertain themselves. They went to the zoo manager and paid the required fee. They were accompanied by a zoo keeper as they visited different habitats of the animals in the zoo. First, they visited the Monkey’s habitat, a beautiful vegetation habitat. Vivian was so excited by the activities of these monkeys jumping from one tall tree to another. They visited the elephant, ostrich, peacock, tiger and lion’s habitat. Vivian was so excited seeing these animals except the Lions and tigers which made her so scared. Vivian enjoyed herself and thanked her parents so much for giving her the opportunity to visit the zoo. The family had an enjoyable ride back home.\n\n
 “Mummy! the zoo was very interesting, I wish to know more about the animals.” Vivian told her mother.\n\n
 “Oh! My sweet daughter I have some tales which I intended to tell you concerning what had happened in the animal kingdom.”\n\n
 “Mummy I will be very happy to hear them.”\n\n
 “My grandfather narrated those tales to me when I was a young girl, they are eight beautiful tales about the animals.”\n\n
 It was in the evening that Mother called Vivian and Noah to narrate her tales about animals. They were excited as they sat down gently beside their mother listening attentively to her tales.



    </string>
    <string name="title_activity_chapter2">2:DAWN OF LIFE</string>
    <string name="title2">Chapter2</string>
    <string name="title3">Chapter3</string>
    <string name="title4">Chapter4</string>
    <string name="title5">Chapter5</string>
    <string name="title6">Chapter6</string>
    <string name="title7">Chapter7</string>
    <string name="title8">Chapter8</string>
    <string name="title9">Chapter9</string>
    <string name="title10">Chapter10</string>
    <string name="title_abt">About</string>
</resources>